--- a/OTI Booking Platform/Views/AdminOptions/ReferenceTables.cshtml
+++ b/OTI Booking Platform/Views/AdminOptions/ReferenceTables.cshtml
@@ -3,22 +3,58 @@
     ViewBag.Title = "Reference Tables";
     ViewBag.PageHeader = "Reference Tables";
     ViewBag.PageDescription = "Tabels for reference information";
+    var Hstr = "";
+    foreach (var item in ViewBag.Headers)
+    {
+        Hstr = Hstr + "{ \"data\": " + "\"" + item + "\" }, \n";
+    }
 }
 
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="nav-tabs-custom">
-            <ul class="nav nav-tabs">
-            </ul>
-            <div class="tab-content">
-                <div class="tab-pane active" id="1">
-                    <h1>Table1</h1>
+        <div class="box">
+            <div class="box-header">
+                <h3 class="box-title">@ViewBag.TableName</h3>
+                <div class="box-tools">
+                    @*<div>@Html.ActionLink("Create New", "Create")</div>*@
+
+                    @*<div class="input-group input-group-sm" style="width: 150px;">
+                        <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+
+                        <div class="input-group-btn">
+                            <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                        </div>
+                    </div>*@
                 </div>
-                <div class="tab-pane" id="2">
-                    <h1>Table2</h1>
-                </div>
+            </div>
+            <div class="box-body table-responsive">
+                <table class="table table-hover table-bordered" id="tb-referenceInfo" style="width: 100%;">
+                    <thead>
+                        <tr>
+                            @foreach (var item in ViewBag.Headers)
+                            {
+                                <th>
+                                    @item
+                                </th>
+                            }
+                        </tr>
+                    </thead>
+                </table>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+        $('#tb-referenceInfo').DataTable({
+            ajax: "@Html.Raw(Request.Url + "Data")",
+            columns: [
+                @Html.Raw(Hstr.Substring(0, Hstr.Length - 3))
+            ],
+            select: true,
+            scrollCollapse: true
+        });
+    });
+</script>
