--- a/OTI Booking Platform/Views/Shared/_Header.cshtml
+++ b/OTI Booking Platform/Views/Shared/_Header.cshtml
@@ -8,7 +8,7 @@
     </a>
     @* END Logo *@
     @* BEGIN Header *@
-    <nav class="navbar navbar-static-top" role="navigation">
+    <nav class="navbar navbar-static-top fixed" role="navigation">
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
             <span class="sr-only">Toggle navigation</span>
         </a>
